🐛 fix: internationalize market page title

--- a/locales/ar/market.json
+++ b/locales/ar/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "تقديم الوكيل",
   "title": {
     "allAgents": "جميع الوكلاء",
+    "findAgents": "البحث واستخدام أفضل الوكلاء",
     "recentSubmits": "الإضافات الأخيرة"
   }
 }
