--- a/locales/bg-BG/market.json
+++ b/locales/bg-BG/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "Изпрати агент",
   "title": {
     "allAgents": "Всички агенти",
+    "findAgents": "Намерете и използвайте най-добрите агенти",
     "recentSubmits": "Последни изпратени"
   }
 }
