--- a/locales/de-DE/market.json
+++ b/locales/de-DE/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "Helfer einreichen",
   "title": {
     "allAgents": "Alle Helfer",
+    "findAgents": "Finde und nutze die besten Helfer",
     "recentSubmits": "Kürzlich hinzugefügt"
   }
 }
