--- a/locales/nl-NL/market.json
+++ b/locales/nl-NL/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "Indienen bij de assistentenmarkt",
   "title": {
     "allAgents": "Alle assistenten",
+    "findAgents": "Vind en gebruik de beste assistenten",
     "recentSubmits": "Recent toegevoegd"
   }
 }
