--- a/locales/pl-PL/market.json
+++ b/locales/pl-PL/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "Zatwierdź asystenta",
   "title": {
     "allAgents": "Wszyscy asystenci",
+    "findAgents": "Znajdź i użyj najlepszych agentów",
     "recentSubmits": "Ostatnie dodane"
   }
 }
