--- a/locales/ru-RU/market.json
+++ b/locales/ru-RU/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "Отправить агента",
   "title": {
     "allAgents": "Все агенты",
+    "findAgents": "Найти и использовать лучших помощников",
     "recentSubmits": "Недавние добавления"
   }
 }
