--- a/locales/vi-VN/market.json
+++ b/locales/vi-VN/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "Gửi trợ lý",
   "title": {
     "allAgents": "Tất cả trợ lý",
+    "findAgents": "Tìm và Sử dụng Các Trợ Lý Tốt Nhất",
     "recentSubmits": "Gần đây thêm mới"
   }
 }
