--- a/locales/ko-KR/market.json
+++ b/locales/ko-KR/market.json
@@ -27,6 +27,7 @@
   "submitAgent": "보조 프로그램 제출",
   "title": {
     "allAgents": "모든 보조 프로그램",
+    "findAgents": "최적의 에이전트 찾기",
     "recentSubmits": "최근 추가"
   }
 }
