--- a/docs/usage/features/database.mdx
+++ b/docs/usage/features/database.mdx
@@ -1,20 +1,25 @@
 ---
-title: LobeChat 支持本地 / 云端数据库存储
-description: LobeChat 支持本地 / 云端数据存储，既能实现 Local First，同时支持数据云同步。
+title: Local / Cloud Database Solutions for LobeChat
+description: >-
+  Explore the options of local and server-side databases for LobeChat, offering
+  data control, privacy protection, and convenient user experiences.
 tags:
-  - LobeChat
-  - IndexedDB
-  - Postgres
-  - Local First
-  - 数据云同步
-  - 数据库
+  - Local Database
+  - Server-Side Database
+  - Data Privacy
+  - Data Control
+  - CRDT Technology
+  - PostgreSQL
+  - Dirzzle ORM
+  - Clerk Authentication
 ---
-# Local / Cloud Data Storage
+
+# Local / Cloud Database
 
 <Image
-alt={'Local / Cloud Data Storage'}
+alt={'Local / Cloud Database'}
 cover
-src={'https://github.com/lobehub/lobe-chat/assets/17870709/acf39ea2-74b3-46ae-8eb8-54a51f7f1d36'}
+src={'https://github.com/lobehub/lobe-chat/assets/17870709/c27a0234-a4e9-40e5-8bcb-42d5ce7e40f9'}
 />
 
 In modern application development, the choice of data storage solution is crucial. To meet the needs of different users, LobeChat offers flexible configurations that support both local and server-side databases. Whether you prioritize data privacy and control or seek a convenient user experience, LobeChat can provide excellent solutions for you.
