📝 docs: Update provider docs

--- a/docs/usage/providers/azure.mdx
+++ b/docs/usage/providers/azure.mdx
@@ -32,9 +32,7 @@ This document will guide you on how to use [Azure OpenAI](https://oai.azure.com/
 <Image
   alt={'Create an Azure OpenAI account'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/a77b0fb2-87d7-4527-a804-2f7ad3634aa5'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/a77b0fb2-87d7-4527-a804-2f7ad3634aa5'}
 />
 
 - After registration, go to the `Deployments` page and create a new deployment with your selected model.
@@ -52,20 +50,16 @@ This document will guide you on how to use [Azure OpenAI](https://oai.azure.com/
 <Image
   alt={'Go to the Chat page'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/ac10d9dd-a977-43fb-8397-b2bbdee6a1a1'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/ac10d9dd-a977-43fb-8397-b2bbdee6a1a1'}
 />
 
 <Image
   alt={'Get the endpoint and key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/ab94a7b5-6bc4-41e0-97bc-724ee8e315db'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/ab94a7b5-6bc4-41e0-97bc-724ee8e315db'}
 />
 
-  ### Step 2: Configure Azure OpenAI in LobeChat
+### Step 2: Configure Azure OpenAI in LobeChat
 
 - Access the `Settings` interface in LobeChat.
 - Find the setting for `Azure OpenAI` under `Language Model`.
@@ -73,9 +67,7 @@ This document will guide you on how to use [Azure OpenAI](https://oai.azure.com/
 <Image
   alt={'Enter the API key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/63d9f6d4-5b78-4c65-8cd1-ff8b7f143406'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/63d9f6d4-5b78-4c65-8cd1-ff8b7f143406'}
 />
 
 - Enter the API key you obtained.
@@ -84,9 +76,7 @@ This document will guide you on how to use [Azure OpenAI](https://oai.azure.com/
 <Image
   alt={'Select Azure OpenAI model and start the conversation'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/ddb44517-8696-4492-acd9-25b590f6069c'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/ddb44517-8696-4492-acd9-25b590f6069c'}
 />
 
 <Callout type={'warning'}>
