--- a/docs/usage/providers/moonshot.mdx
+++ b/docs/usage/providers/moonshot.mdx
@@ -31,9 +31,7 @@ The Moonshot AI API is now available for everyone to use. This document will gui
 <Image
   alt={'Apply for API Key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/4e56e080-9b8c-42e1-87e1-11123dbb9067'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/4e56e080-9b8c-42e1-87e1-11123dbb9067'}
 />
 
 ### Step 2: Configure Moonshot AI in LobeChat
@@ -44,9 +42,7 @@ The Moonshot AI API is now available for everyone to use. This document will gui
 <Image
   alt={'Enter API Key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/e1b5f84f-015e-437c-98cc-a3431fa3b077'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/e1b5f84f-015e-437c-98cc-a3431fa3b077'}
 />
 
 <Callout type={'warning'}>
@@ -61,9 +57,7 @@ The Moonshot AI API is now available for everyone to use. This document will gui
 <Image
   alt={'Select Moonshot AI model and start conversation'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/eb7273f8-f0ed-4b9b-884e-96d29c406cb7'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/eb7273f8-f0ed-4b9b-884e-96d29c406cb7'}
 />
 
 <Callout type={'warning'}>
