--- a/docs/usage/providers/openai.mdx
+++ b/docs/usage/providers/openai.mdx
@@ -62,8 +62,7 @@ This document will guide you on how to use [OpenAI](https://openai.com/) in Lobe
 />
 
 <Callout type={'warning'}>
-  After registering, you generally have a free credit of $5, but it is only valid for three
-  months.
+  After registering, you generally have a free credit of $5, but it is only valid for three months.
 </Callout>
 
 ### Step 2: Configure OpenAI in LobeChat
@@ -74,9 +73,7 @@ This document will guide you on how to use [OpenAI](https://openai.com/) in Lobe
 <Image
   alt={'Enter API Key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/3f31bc33-509f-4ad2-ba81-280c2a6ec5fa'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/3f31bc33-509f-4ad2-ba81-280c2a6ec5fa'}
 />
 
 - Enter the obtained API Key
@@ -85,9 +82,7 @@ This document will guide you on how to use [OpenAI](https://openai.com/) in Lobe
 <Image
   alt={'Select OpenAI model and start conversation'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/ff7ebacf-27f0-42d7-810b-00314499a084'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/ff7ebacf-27f0-42d7-810b-00314499a084'}
 />
 
 <Callout type={'warning'}>
