--- a/docs/usage/providers/mistral.mdx
+++ b/docs/usage/providers/mistral.mdx
@@ -32,9 +32,7 @@ The Mistral AI API is now available for everyone to use. This document will guid
 <Image
   alt={'Obtain your API Key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/79faa59a-dfc0-4365-a679-5fc12c12bc70'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/79faa59a-dfc0-4365-a679-5fc12c12bc70'}
 />
 
 ### Step 2: Configure Mistral AI in LobeChat
@@ -45,9 +43,7 @@ The Mistral AI API is now available for everyone to use. This document will guid
 <Image
   alt={'Enter API Key'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/ba8e688a-e0c1-4567-9013-94205f83fc60'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/ba8e688a-e0c1-4567-9013-94205f83fc60'}
 />
 
 <Callout type={'warning'}>
@@ -62,14 +58,12 @@ The Mistral AI API is now available for everyone to use. This document will guid
 <Image
   alt={'Select Mistral AI Model and Start Conversation'}
   inStep
-  src={
-    'https://github.com/lobehub/lobe-chat/assets/17870709/82cf4f5c-be5c-4126-a475-3a03468a9c39'
-  }
+  src={'https://github.com/lobehub/lobe-chat/assets/17870709/82cf4f5c-be5c-4126-a475-3a03468a9c39'}
 />
 
 <Callout type={'warning'}>
-  During usage, you may need to pay the API service provider, please refer to Mistral AI's
-  relevant pricing policies.
+  During usage, you may need to pay the API service provider, please refer to Mistral AI's relevant
+  pricing policies.
 </Callout>
 
 </Steps>
