📝 docs: Update docs

--- a/docs/usage/providers/01ai.zh-CN.mdx
+++ b/docs/usage/providers/01ai.zh-CN.mdx
@@ -1,8 +1,12 @@
 ---
-title: 在 LobeChat 中使用零一万物
-description: 学习如何在 LobeChat 中配置并使用零一万物提供的 AI 模型进行对话。获取 API 密钥、填入设置项、选择模型，开始与 AI 助手交流。
+title: 在 LobeChat 中使用 01.AI 零一万物
+description: >-
+  学习如何在 LobeChat 中配置并使用 01.AI 零一万物提供的 AI 模型进行对话。获取 API 密钥、填入设置项、选择模型，开始与 AI
+  助手交流。
 tags:
   - LobeChat
+  - 01.AI
+  - Zero One AI
   - 零一万物
   - AI模型
   - API密钥
