--- a/docs/usage/providers/openrouter.zh-CN.mdx
+++ b/docs/usage/providers/openrouter.zh-CN.mdx
@@ -1,5 +1,5 @@
 ---
-title: 在 LobeChat 中使用 Openrouter
+title: 在 LobeChat 中使用 OpenRouter
 description: 学习如何在 LobeChat 中注册、创建 API 密钥、充值信用额度并配置 OpenRouter，以便开始使用多种优秀大语言模型 API。
 tags:
   - LobeChat
@@ -12,17 +12,17 @@ tags:
   - 配置
 ---
 
-# 在 LobeChat 中使用 Openrouter
+# 在 LobeChat 中使用 OpenRouter
 
 <Image
-  alt={'在 LobeChat 中使用 Openrouter'}
+  alt={'在 LobeChat 中使用 OpenRouter'}
   cover
   src={'https://github.com/lobehub/lobe-chat/assets/34400653/40520a43-ac03-4954-8a4d-282fbb946066'}
 />
 
 [OpenRouter](https://openrouter.ai/) 是一个提供多种优秀大语言模型 API 的服务，它支持 OpenAI (包括 GPT-3.5/4)、Anthropic (Claude2、Instant)、LLaMA 2 和 PaLM Bison 等众多模型。
 
-本文档将指导你如何在 LobeChat 中使用 Openrouter:
+本文档将指导你如何在 LobeChat 中使用 OpenRouter:
 
 <Steps>
 
