--- a/docs/usage/tools-calling.zh-CN.mdx
+++ b/docs/usage/tools-calling.zh-CN.mdx
@@ -225,22 +225,35 @@ Create images from a text-only prompt.
 
 此外，由于文生图的 prompts 的生成时间较长，这一组指令也可以清晰地测试出模型的 API 是否支持流式 Tool Calling。
 
-## 评测结果综合一览
+## 评测结果
 
 根据以上的测试任务，我们对支持 Tools Calling 的模型进行了测试，评测结果如下：
 
-### API 基础能力
+### 综合结果一览
 
-| 模型              | 服务商    | 支持 Tool Calling | 流式 Tool Calling | 并发调用 |
-| ----------------- | --------- | ----------------- | ----------------- | -------- |
-| GPT-3.5-turbo     | OpenAI    | ✅                | ✅                | ✅       |
-| GPT-4-turbo       | OpenAI    | ✅                | ✅                | ✅       |
-| GPT-4o            | OpenAI    | ✅                | ✅                | ✅       |
-| Claude 3 Haiku    | Anthropic | ✅                | ✅                | ❌       |
-| Claude 3 Sonnet   | Anthropic | ✅                | ✅                | ❌       |
-| Claude 3.5 Sonnet | Anthropic | ✅                | ✅                | ❌       |
-| Claude 3 Opus     | Anthropic | ✅                | ✅                | ❌       |
-| Gemini-1.5-pro    | Google    | ✅                | ❌                | ❌       |
+| 模型 | 服务商 | 支持 Tool Calling | 流式 （Stream） | 并发（Parallel） | 简单指令 | 复杂指令 | 评测链接 |
+| --- | --- | --- | --- | --- | --- | --- | --- |
+| GPT-3.5-turbo | OpenAI | ✅ | ✅ | ✅ | 3 | 2 | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-3-5-turbo) |
+| GPT-4-turbo | OpenAI | ✅ | ✅ | ✅ | 3 |  | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-4-turbo) |
+| GPT-4o | OpenAI | ✅ | ✅ | ✅ | 3 |  | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-4o) |
+| Claude 3.5 Sonnet | Anthropic | ✅ | ✅ | ❌ |  |  | [查看详情](/zh/docs/usage/tools-calling/anthropic#claude-3.5-sonnet) |
+| Claude 3 Opus | Anthropic | ✅ | ✅ | ❌ |  |  | [查看详情](/zh/docs/usage/tools-calling/anthropic#claude-3-opus) |
+| Claude 3 Sonnet | Anthropic | ✅ | ✅ | ❌ |  |  | [查看详情](/zh/docs/usage/tools-calling/anthropic#claude-3-sonnet) |
+| Claude 3 Haiku | Anthropic | ✅ | ✅ | ❌ |  |  | [查看详情](/zh/docs/usage/tools-calling/anthropic#gpt-3-haiku) |
+| Gemini-1.5-pro | Google | ✅ | ❌ | ❌ |  |  | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-3-5-turbo) |
+| LLAMA3-70B | Groq | ✅ | ❌ | ✅ |  |  | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-3-5-turbo) |
+| LLAMA3-8B | Groq | ✅ | ❌ | ✅ |  |  | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-3-5-turbo) |
+| Mixtral-8x7B | Groq | ✅ | ❌ | ❌ |  |  | [查看详情](/zh/docs/usage/tools-calling/openai#gpt-3-5-turbo) |
+| Moonshot | Moonshot（月之暗面） | ✅ | ✅ | ✅ | 3 |  |  |
+| GLM-4 | Zhipu | ✅ | ❌ | ❌ | <br /> |  |  |
+| GLM-3 | Zhipu | ✅ | ❌ | ❌ | <br /> |  |  |
+| Mixtral 8x22B | Mixtral | ✅ | ❌ | ❌ | <br /> |  |  |
+| Mixtral Large | Mixtral | ✅ | ❌ | ❌ | <br /> |  |  |
+| abab-6.5s-chat | Minimax | ✅ | ❌ | ❌ | <br /> |  |  |
+| abab-6.5-chat | Minimax | ✅ | ❌ | ❌ | <br /> |  |  |
+| abab-6-chat | Minimax | ✅ | ❌ | ❌ | <br /> |  |  |
+| pplx | perplexity | ❌ | ❌ | ❌ | - | - | - |
+| Yi | 01.AI | ❌ | ❌ | ❌ | - | - | - |
 
 ### 简单指令·天气查询
 
