--- a/docs/usage/tools-calling.zh-CN.mdx
+++ b/docs/usage/tools-calling.zh-CN.mdx
@@ -128,8 +128,8 @@ Create images from a text-only prompt.
 - 指令 ③ 测试的能力项仅包含「基础 Tool Calling 调用」。
 
 <Callout type={'info'}>
-  将指令 ① 、② 、③ 按照难度递减的方式，排序方式目的是降低测试的成本。因为当模型能通过指令 ①
-  的测试时，我们就不需要继续测试指令 ② 和指令 ③ 了，必然是能通过的。
+  将指令 ① 、② 、③ 按照难度递减的方式排序的目的，是为了降低测试的成本。因为当模型能通过指令 ①
+  的测试时，我们就不需要继续测试指令 ② 和指令 ③ ，必然能通过。
 </Callout>
 
 测试能力项详细说明:
