--- a/docs/usage/tools-calling/openai.zh-CN.mdx
+++ b/docs/usage/tools-calling/openai.zh-CN.mdx
@@ -20,7 +20,7 @@ title: OpenAI GPT 系列 Tool Calling
 <details>
 <summary>流式 Tool Calling 原始输出：</summary>
 
-```shell
+```yml
 [stream start] 2024-21-5 14:22:53.476
 [chunk 0] 2024-21-5 14:22:53.481
 {"id":"chatcmpl-9cRxXqXcytS0xohr9sczNjeWP4JHF","object":"chat.completion.chunk","created":1718950967,"model":"gpt-3.5-turbo-0125","system_fingerprint":null,"choices":[{"index":0,"delta":{"role":"assistant","content":""},"logprobs":null,"finish_reason":null}]}
@@ -137,7 +137,7 @@ title: OpenAI GPT 系列 Tool Calling
 <details>
 <summary>流式 Tool Calling 原始输出：</summary>
 
-```shell
+```yml
 [stream start] 2024-21-5 15:17:51.3
 [chunk 0] 2024-21-5 15:17:51.18
 {"id":"chatcmpl-9cSoovX209wVb9nZr3VmPE6AgV2NS","object":"chat.completion.chunk","created":1718954270,"model":"gpt-3.5-turbo-0125","system_fingerprint":null,"choices":[{"index":0,"delta":{"role":"assistant","content":null,"tool_calls":[{"index":0,"id":"call_8Jyy5K4x3Zl7KDKxZRigeWlg","type":"function","function":{"name":"lobe-image-designer____text2image____builtin","arguments":""}}]},"logprobs":null,"finish_reason":null}]}
@@ -290,3 +290,15 @@ title: OpenAI GPT 系列 Tool Calling
 ```
 
 </details>
+
+## GPT 4-turbo
+
+### 简单调用指令：天气查询
+
+TODO
+
+## GPT 4o
+
+### 简单调用指令：天气查询
+
+TODO
