--- a/docs/self-hosting/advanced/model-list.mdx
+++ b/docs/self-hosting/advanced/model-list.mdx
@@ -12,7 +12,7 @@ tags:
 
 # Model List
 
-LobeChat supports customizing the model list during deployment. You can use `+` to add a model, `-` to hide a model, and use `model name=display name<extension configuration>` to customize the display name of a model, separated by English commas. The basic syntax is as follows:
+LobeChat supports customizing the model list during deployment. This configuration is done in the environment for each [model provider](model-providers). You can use `+` to add a model, `-` to hide a model, and use `model name=display name<extension configuration>` to customize the display name of a model, separated by English commas. The basic syntax is as follows:
 
 ```text
 id=displayName<maxToken:vision:fc:file>,model2,model3
@@ -46,3 +46,5 @@ Currently supported extension capabilities are:
 | `fc`     | Function Calling                                         |
 | `vision` | Image Recognition                                        |
 | `file`   | File Upload (a bit hacky, not recommended for daily use) |
+
+[model-providers]: /docs/self-hosting/environment-variables/model-provider
