--- a/docs/usage/start.mdx
+++ b/docs/usage/start.mdx
@@ -1,5 +1,5 @@
 ---
-title: Get started with LobeChat
+title: Get started with Finsi AI
 description: >-
   Explore the exciting features in LobeChat, including Vision Model, TTS & STT,
   Local LLMs, and Multi AI Providers. Discover more about Agent Market, Plugin
@@ -13,6 +13,7 @@ tags:
   - Agent Market
   - Plugin System
 ---
+
 
 # ✨ Feature Overview
 
