--- a/docs/usage/start.mdx
+++ b/docs/usage/start.mdx
@@ -1,7 +1,7 @@
 ---
 title: Get started with Finsi AI
 description: >-
-  Explore the exciting features in LobeChat, including Vision Model, TTS & STT,
+  Explore the exciting features in Finsi AI, including Vision Model, TTS & STT,
   Local LLMs, and Multi AI Providers. Discover more about Agent Market, Plugin
   System, and Personalization.
 tags:
