--- a/docs/usage/tools-calling/openai.zh-CN.mdx
+++ b/docs/usage/tools-calling/openai.zh-CN.mdx
@@ -4,9 +4,7 @@ title: OpenAI GPT 系列 Tool Calling
 
 # OpenAI GPT Tool Calling
 
-123yiuu8
-
-OpenAI  GPT 系列模型 Tool Calling 能力一览：
+OpenAI GPT 系列模型 Tool Calling 能力一览：
 
 | 模型 | 支持 Tool Calling | 流式 （Stream） | 并发（Parallel） | 简单指令·指令 ① | 复杂指令 |
 | --- | --- | --- | --- | --- | --- |
@@ -15,7 +13,8 @@ OpenAI  GPT 系列模型 Tool Calling 能力一览：
 | GPT-4o | ✅ | ✅ | ✅ | ✅ | ✅ |
 
 <Callout type={'info'}>
-  关于测试指令，详见 [工具调用 Tools Calling - 评测任务介绍](/zh/docs/usage/tools-calling#评测任务介绍)
+  关于测试指令，详见 [工具调用 Tools Calling -
+  评测任务介绍](/zh/docs/usage/tools-calling#评测任务介绍)
 </Callout>
 
 ## GPT 3.5-turbo
